--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "one-line-a-day",
+    "name": "One Line A Day",
     "slug": "one-line-a-day",
     "version": "1.0.0",
     "orientation": "portrait",
